ref issue:#309 add page-index, page-current

--- a/horizon/locale/zh_CN/LC_MESSAGES/django.po
+++ b/horizon/locale/zh_CN/LC_MESSAGES/django.po
@@ -418,10 +418,18 @@ msgstr "%s 成功完成"
 msgid "%s did not complete."
 msgstr "%s 没有完成"
 
-#: horizon/common/_data_table.html:66
+#: horizon/common/_data_table.html:68
 msgid "page-previous"
 msgstr "上一页"
 
-#: horizon/common/_data_table.html:72
+#: horizon/common/_data_table.html:74
 msgid "page-next"
 msgstr "下一页"
+
+#: horizon/common/_data_table.html:66
+msgid "page-index"
+msgstr "首页"
+
+#: horizon/common/_data_table.html:64
+msgid "page-current"
+msgstr "当前页"
