Update the site navigation and stylesheets.
Add icons to level 1 and level 2 navigations.
Replace the default favicon with VSCloud related one.
Replace splash image on login page with VSCloud related one.
Change table's header, footer and current hovered row background color.
Add page footer template and include it in the base.html.
Show branding on the page header.
Hide the admin dashboard by default and allow user to open it
from profile dropdown menu.

ref #233

--- a/horizon/locale/zh_CN/LC_MESSAGES/django.po
+++ b/horizon/locale/zh_CN/LC_MESSAGES/django.po
@@ -135,6 +135,10 @@ msgstr "id \"%s\" 没有匹配的返回顶"
 msgid "Please select a row before taking that action."
 msgstr "请在执行前选择一行。"
 
+#: templates/_footer.html:2
+msgid "Beijing Venusource Tech. Co., Ltd."
+msgstr "北京天诚星源信息技术有限公司"
+
 #: templates/_header.html:5
 #, python-format
 msgid "Logged in as: %(username)s"
