--- a/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
@@ -5805,6 +5805,10 @@ msgstr "编辑安全组"
 msgid "Console"
 msgstr "控制台"
 
+#: dashboards/project/instances/tabs.py:124
+msgid "Ceilometer"
+msgstr "事实监控"
+
 #: dashboards/project/instances/tables.py:333
 msgid "View Log"
 msgstr "查看日志"
