--- a/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
@@ -1556,7 +1556,7 @@ msgstr "组管理："
 #: dashboards/admin/hypervisors/tables.py:65
 #: dashboards/admin/hypervisors/templates/hypervisors/index.html:4
 msgid "Hypervisors"
-msgstr "主机"
+msgstr "物理主机"
 
 #: dashboards/admin/hypervisors/tables.py:26
 msgid "Hostname"
@@ -1702,6 +1702,10 @@ msgstr "镜像"
 #: dashboards/project/instances/workflows/create_instance.py:107
 msgid "Image Name"
 msgstr "镜像名称"
+
+#: dashboards/project/instances/tables.py:50
+msgid "RUNNING"
+msgstr "运行"
 
 #: dashboards/admin/images/views.py:54
 msgid "Unable to retrieve image list."
@@ -5617,12 +5621,12 @@ msgstr "校验和"
 #: dashboards/project/volumes/templates/volumes/snapshots/_detail_overview.html:39
 #: dashboards/project/volumes/templates/volumes/volumes/_detail_overview.html:29
 msgid "Created"
-msgstr "已创建"
+msgstr "创建于"
 
 #: dashboards/project/images/templates/images/images/_detail_overview.html:31
 #: dashboards/project/stacks/tables.py:95
 msgid "Updated"
-msgstr "已更新"
+msgstr "更新于"
 
 #: dashboards/project/images/templates/images/images/_detail_overview.html:35
 msgid "Never updated"
@@ -9870,3 +9874,15 @@ msgstr "内存"
 #: dashboards/project/instances/templates/instances/_detail_ceilometer.html:121
 msgid "network"
 msgstr "网络"
+
+#: openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
+msgid "True"
+msgstr "是"
+
+#: openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
+msgid "False"
+msgstr "否"
+
+#: openstack_dashboard/dashboards/project/networks/templates/networks/ports/_detail_overview.html
+msgid "No attached device"
+msgstr "未连接设备"
