--- a/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
@@ -9955,11 +9955,11 @@ msgid "Memory Used(Units/"
 msgstr "内存使用量(单位/"
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 23
-msgid "Harware Disk Size Used(Units/"
+msgid "Harware Disk Used(Units/"
 msgstr "磁盘使用量(单位/"
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 26
-msgid "Harware Disk Size Usage(Units/"
+msgid "Harware Disk Usage(Units/"
 msgstr "磁盘使用率(单位/"
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 29
@@ -9977,7 +9977,15 @@ msgstr "网络发送包速率(单位/"
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 38
 msgid "Network Incoming Packets Rate(Units/"
 msgstr "网络接收包速率(单位/"
-                
+
+#: openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html 20
+msgid "VM Disk Usage(Units/"
+msgstr "磁盘使用率(单位/"
+
+#: openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html 23
+msgid "VM Disk Ephemeral Usage(Units/"
+msgstr "磁盘使用率(单位/"
+            
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html:57
 msgid "30 min"
 msgstr "30分钟"
