--- a/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
@@ -9936,55 +9936,55 @@ msgstr "网络带宽速率"
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_instance.html 32
 msgid "CPU Usage(Units/"
-msgstr "CPU使用率(单位/"
+msgstr "CPU使用率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_instance.html 50
 msgid "Memory Usage(Units/"
-msgstr "内存使用率（单位/"
+msgstr "内存使用率（单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_instance.html 81
 msgid "Network Bandwidth(Units/"
-msgstr "网络带宽速率(单位/"
+msgstr "网络带宽速率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_instance.html 100
 msgid "Network Packege(Units/"
-msgstr "网络数据包速率（单位/"
+msgstr "网络数据包速率（单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 17
 msgid "Memory Used(Units/"
-msgstr "内存使用量(单位/"
+msgstr "内存使用量(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 23
 msgid "Harware Disk Used(Units/"
-msgstr "磁盘使用量(单位/"
+msgstr "磁盘使用量(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 26
 msgid "Harware Disk Usage(Units/"
-msgstr "磁盘使用率(单位/"
+msgstr "磁盘使用率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 29
 msgid "Network Outgoing Bytes Rate(Units/"
-msgstr "网络发送速率(单位/"
+msgstr "网络发送速率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 32
 msgid "Network Incoming Bytes Rate(Units/"
-msgstr "网络接收速率(单位/"
+msgstr "网络接收速率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 35
 msgid "Network Outgoing Packets Rate(Units/"
-msgstr "网络发送包速率(单位/"
+msgstr "网络发送包速率(单位: "
 
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html 38
 msgid "Network Incoming Packets Rate(Units/"
-msgstr "网络接收包速率(单位/"
+msgstr "网络接收包速率(单位: "
 
 #: openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html 20
 msgid "VM Disk Usage(Units/"
-msgstr "磁盘使用率(单位/"
+msgstr "磁盘使用率(单位: "
 
 #: openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html 23
 msgid "VM Disk Ephemeral Usage(Units/"
-msgstr "临时磁盘使用率(单位/"
+msgstr "临时磁盘使用率(单位: "
             
 #: openstack_dashboard/dashboards/admin/hypervisor/templates/hypervisor/_detail_usage.html:57
 msgid "30 min"
