--- a/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_CN/LC_MESSAGES/django.po
@@ -9813,7 +9813,7 @@ msgstr "下载 CSV 摘要"
 #:dashboards/project/instances/templates/instances/_detail_usage.html:108
 #:dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html:126
 msgid "Download CSV Report"
-msgstr "下载 CSV 报表"
+msgstr "导出CSV格式报表"
 
 #: usage/tables.py:39
 msgid "VCPU Hours"
